[tool.poetry]
name = "flowers"
version = "0.1.0"
description = ""
authors = ["hiki7 <rsaliyev03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
