[tool.poetry]
name = "flowers"
version = "0.1.0"
description = ""
authors = ["hiki7 <rsaliyev03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
psycopg = "^3.2.1"
passlib = "^1.7.4"
jose = "^1.0.0"
uvicorn = "^0.30.5"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
